# shai_hulud_worm_audit

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/skills/shai-hulud-audit/: SKILL.md
.github/workflows/: ci.yml  ioc-refresh.yml
shai_hulud_audit/: __init__.py  __main__.py  audit.py  findings.py
shai_hulud_audit/ioc/: loader.py  updater.py
shai_hulud_audit/ioc/data/: compromised-packages.txt  filenames.txt  github_patterns.txt  hashes.txt  manifest.json  network.txt  shai-hulud-2.0.csv
shai_hulud_audit/report/: human.py  json_out.py  sarif.py
shai_hulud_audit/scan/: filenames.py  git_history.py  github.py  hashes.py  host.py  installed.py  lifecycle.py  lockfiles.py  manifests.py
tests/: conftest.py  test_cli.py  test_git_history.py  test_hashes_filenames_lifecycle.py  test_loader.py  test_lockfiles.py  test_manifests.py
