[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shai-hulud-audit"
version = "0.1.0"
description = "Audit a project for Shai-Hulud npm/PyPI supply-chain worm artifacts (current and historical)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "PQCWorld" }]
keywords = ["security", "supply-chain", "npm", "pypi", "shai-hulud", "worm", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
update = ["requests>=2.31"]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4"]

[project.scripts]
shai-hulud-audit = "shai_hulud_audit.__main__:main"

[project.urls]
Homepage = "https://github.com/PQCWorld/shai_hulud_worm_audit"
Issues = "https://github.com/PQCWorld/shai_hulud_worm_audit/issues"

[tool.setuptools.packages.find]
include = ["shai_hulud_audit*"]

[tool.setuptools.package-data]
shai_hulud_audit = ["ioc/data/*.csv", "ioc/data/*.txt", "ioc/data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
